--- a/bitrise-screenshot-automation/Info.plist
+++ b/bitrise-screenshot-automation/Info.plist
@@ -22,6 +22,10 @@
 	<true/>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Your location will be used on the map.</string>
+	<key>NSUserActivityTypes</key>
+	<array>
+		<string>SelectLocationIntent</string>
+	</array>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
