--- a/bitrise.yml
+++ b/bitrise.yml
@@ -1,67 +1,60 @@
 ---
-format_version: '8'
+format_version: '11'
 default_step_lib_source: https://github.com/bitrise-io/bitrise-steplib.git
 project_type: ios
-trigger_map:
-- push_branch: "*"
-  workflow: screenshots
-- pull_request_source_branch: "*"
-  workflow: primary
 workflows:
   deploy:
-    steps:
-    - activate-ssh-key@4.0:
-        run_if: '{{getenv "SSH_RSA_PRIVATE_KEY" | ne ""}}'
-    - git-clone@4.0: {}
-    - cache-pull@2.1: {}
-    - script@1.1:
-        title: Do anything with Script step
-    - certificate-and-profile-installer@1.10: {}
-    - xcode-test@2.4:
-        inputs:
-        - project_path: "$BITRISE_PROJECT_PATH"
-        - scheme: "$BITRISE_SCHEME"
-    - xcode-archive@2.7:
-        inputs:
-        - project_path: "$BITRISE_PROJECT_PATH"
-        - scheme: "$BITRISE_SCHEME"
-        - export_method: "$BITRISE_EXPORT_METHOD"
-    - deploy-to-bitrise-io@1.9: {}
-    - cache-push@2.2: {}
-  primary:
-    steps:
-    - activate-ssh-key@4.0:
-        run_if: '{{getenv "SSH_RSA_PRIVATE_KEY" | ne ""}}'
-    - git-clone@4.0: {}
-    - cache-pull@2.1: {}
-    - script@1.1:
-        title: Do anything with Script step
-    - certificate-and-profile-installer@1.10: {}
-    - xcode-test@2.4:
-        inputs:
-        - project_path: "$BITRISE_PROJECT_PATH"
-        - scheme: "$BITRISE_SCHEME"
-    - deploy-to-bitrise-io@1.9: {}
-    - cache-push@2.2: {}
-  screenshots:
-    steps:
-    - activate-ssh-key@4.0:
-        run_if: '{{getenv "SSH_RSA_PRIVATE_KEY" | ne ""}}'
-    - git-clone@4.0: {}
-    - script@1:
-        title: Add missing simulators
-        inputs:
-        - content: |-
-            #!/usr/bin/env bash
-            # fail if any commands fails
-            set -e
-            # debug log
-            set -x
+    description: |
+      The workflow tests, builds and deploys the app using *Deploy to bitrise.io* step.
 
-            # Create the iPad Pro (12.9-inch) (2nd generation) simulator
-            xcrun simctl create "iPad Pro (12.9-inch) (2nd generation)" "com.apple.CoreSimulator.SimDeviceType.iPad-Pro--12-9-inch---2nd-generation-" "com.apple.CoreSimulator.SimRuntime.iOS-13-4"
+      For testing the *retry_on_failure* test repetition mode is enabled.
+
+      Next steps:
+      - Set up [Connecting to an Apple service with API key](https://devcenter.bitrise.io/en/accounts/connecting-to-services/connecting-to-an-apple-service-with-api-key.html##).
+      - Or further customise code signing following our [iOS code signing](https://devcenter.bitrise.io/en/code-signing/ios-code-signing.html) guide.
+    steps:
+    - git-clone@6: {}
+    - cache-pull@2: {}
+    - xcode-test@4:
+        inputs:
+        - project_path: "$BITRISE_PROJECT_PATH"
+        - scheme: "$BITRISE_SCHEME"
+        - test_repetition_mode: retry_on_failure
+    - xcode-archive@4:
+        inputs:
+        - project_path: "$BITRISE_PROJECT_PATH"
+        - scheme: "$BITRISE_SCHEME"
+        - distribution_method: "$BITRISE_DISTRIBUTION_METHOD"
+        - automatic_code_signing: api-key
+    - cache-push@2: {}
+    - deploy-to-bitrise-io@2: {}
+  primary:
+    description: |
+      The workflow executes the tests. The *retry_on_failure* test repetition mode is enabled.
+
+      Next steps:
+      - Check out [Getting started with iOS apps](https://devcenter.bitrise.io/en/getting-started/getting-started-with-ios-apps.html).
+    steps:
+    - git-clone@6: {}
+    - cache-pull@2: {}
+    - xcode-test@4:
+        inputs:
+        - project_path: "$BITRISE_PROJECT_PATH"
+        - scheme: "$BITRISE_SCHEME"
+        - test_repetition_mode: retry_on_failure
+    - cache-push@2: {}
+    - deploy-to-bitrise-io@2: {}
+  screenshots:
+    description: |
+      The workflow executes the tests. The *retry_on_failure* test repetition mode is enabled.
+
+      Next steps:
+      - Check out [Getting started with iOS apps](https://devcenter.bitrise.io/en/getting-started/getting-started-with-ios-apps.html).
+    steps:
+    - git-clone@6: {}
+    - cache-pull@2: {}
     - script@1:
-        title: Set up environment variables
+        title: Setup Environment Variables
         inputs:
         - content: |-
             #!/bin/bash
@@ -84,7 +77,7 @@ workflows:
               envman add --key CHARGEPOINT_IOS_DEVICE_REGION --value "$API_CHARGEPOINT_IOS_DEVICE_REGION"
             fi
     - script@1:
-        title: Disable hardware keyboard in Simulator
+        title: Disable Hardware Keyboard in Simulator
         inputs:
         - content: |-
             #!/usr/bin/env bash
@@ -95,7 +88,6 @@ workflows:
 
             defaults write com.apple.iphonesimulator ConnectHardwareKeyboard -bool false
     - script@1:
-        title: Modify Simulator language before launch
         inputs:
         - content: |-
             #!/usr/bin/env bash
@@ -106,7 +98,9 @@ workflows:
 
             # Modify the iOS Simulator language before launch
             find ~/Library/Developer/CoreSimulator/Devices/* -type d -maxdepth 0 -exec /usr/libexec/PlistBuddy -c "Delete :AppleLanguages" -c "Add :AppleLanguages array" -c "Add :AppleLanguages:0 string $CHARGEPOINT_IOS_DEVICE_LANGUAGE" -c "Delete :AppleLocale" -c "Add :AppleLocale string $CHARGEPOINT_IOS_DEVICE_REGION" {}/data/Library/Preferences/.GlobalPreferences.plist \;
+        title: Modify Simulator Language before Launch
     - script@1:
+        title: Set UIUserInterfaceStyle
         inputs:
         - content: |-
             #!/usr/bin/env bash
@@ -130,41 +124,30 @@ workflows:
             fi
 
             find ~/Library/Developer/CoreSimulator/Devices/* -type d -maxdepth 0 -exec /usr/libexec/PlistBuddy -c "Delete :UserInterfaceStyleMode" -c "Add :UserInterfaceStyleMode integer $style" {}/data/Library/Preferences/com.apple.uikitservices.userInterfaceStyleMode.plist \;
-        title: Set UIUserInterfaceStyle
-    - xcode-test@2.4:
+    - xcode-test@4:
         inputs:
         - project_path: "$BITRISE_PROJECT_PATH"
         - scheme: "$BITRISE_SCHEME"
-        - export_uitest_artifacts: 'true'
-        - generate_code_coverage_files: 'yes'
-        - verbose: 'yes'
-        - is_clean_build: 'yes'
-        - xcodebuild_test_options: "-derivedDataPath derivedData -testPlan 'Screenshots'"
-        - headless_mode: 'no'
-        - simulator_device: "$CHARGEPOINT_IOS_DEVICE"
+        - test_plan: Screenshots
+        - destination: platform=iOS Simulator,name=$CHARGEPOINT_IOS_DEVICE,OS=latest
+        - xcodebuild_options: "-only-test-configuration $CHARGEPOINT_IOS_DEVICE_LANGUAGE"
+        - test_repetition_mode: retry_on_failure
     - xcparse@0:
-        inputs:
-        - screenshots_divide_by_language: 'yes'
-        - screenshots_divide_by_test: 'yes'
-        - screenshots_divide_by_region: 'yes'
         is_always_run: true
-    - create-zip@0:
-        title: Attach xcresult as ZIP to Deploy
+    - script@1:
+        title: Attached screenshots directly
         inputs:
-        - destination: "$BITRISE_DEPLOY_DIR"
-        - source_path: "$BITRISE_XCRESULT_PATH"
-        is_always_run: true
-    - deploy-to-bitrise-io@1.9: {}
-    envs:
-    - opts:
-        is_expand: false
-      CHARGEPOINT_IOS_DEVICE_LANGUAGE: ko-KR
-    - opts:
-        is_expand: false
-      CHARGEPOINT_IOS_DEVICE_REGION: ko-Kore_KR
-    meta:
-      bitrise.io:
-        stack: osx-xcode-11.4.x
+        - content: |-
+            #!/usr/bin/env bash
+
+            echo "$XCPARSE_SCREENSHOTS_PATH"
+            mkdir /tmp/workflow_screenshots
+            unzip "$XCPARSE_SCREENSHOTS_PATH" -d /tmp/workflow_screenshots
+            find /tmp/workflow_screenshots -type f \( -iname \*.jpg -o -iname \*.png \) -exec cp {} $BITRISE_DEPLOY_DIR \;
+    - deploy-to-bitrise-io@2: {}
+meta:
+  bitrise.io:
+    stack: osx-xcode-14.1.x
 app:
   envs:
   - opts:
@@ -175,7 +158,7 @@ app:
     BITRISE_SCHEME: bitrise-screenshot-automation
   - opts:
       is_expand: false
-    BITRISE_EXPORT_METHOD: development
+    BITRISE_DISTRIBUTION_METHOD: development
   - opts:
       is_expand: false
     CHARGEPOINT_IOS_DEVICE: iPhone 11 Pro Max
@@ -191,3 +174,8 @@ app:
   - opts:
       is_expand: false
     CHARGEPOINT_LANGUAGE: en
+trigger_map:
+- push_branch: "*"
+  workflow: screenshots
+- pull_request_source_branch: "*"
+  workflow: primary
